Linked to CSS file

--- a/labay_sparky.html
+++ b/labay_sparky.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Sparky the Sun Devil</title>		
+		<meta name="author" content="Brian Labay">
+		<link rel="stylesheet" href="labay_spark_styles.css">
+		<title>Sparky the Sun Devil</title>
 	</head>
 
 	<body>
